MDEV-8241: Debug build on Windows is broken: error LNK2019: unresolved external symbol pthread_detach referenced in function ma_checkpoint_init

pthread_detach() replaced with pthread_detach_this_thread()

pthread_detach_this_thread() definition fixed